call for collaboration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   speech_to_text: ^6.6.2
   http: ^1.2.2
   lottie: ^3.1.2
-  just_audio: ^0.9.37
+  audioplayers: ^6.0.0
+  just_audio: ^0.9.39
+  dart_openai: ^5.1.0
 
 dev_dependencies:
   flutter_test:
